Bericht: Michaels Einleitung/Idee überlesen.

--- a/Documentation/Report/Parts/Einleitung.tex
+++ b/Documentation/Report/Parts/Einleitung.tex
@@ -1,12 +1,9 @@
 \authoredSection{michael}{Einleitung und Projektkontext}
-
-Der vorliegende Bericht soll die rückblickende Betrachtung eines universitären Software-Pro\-jekts konstituieren, bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die zentrale Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
-Dieser sollte in Architektur und Gestaltung das Verständnis softwaretechnischer wie interaktiver Konzepte deutlich machen, gleichzeitig aber geeignet sein, in einer konkreten Produktdemonstration im Projektabschluss kommerziellen Nutzen zu demonstrieren.
-Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführenden Zertifizierung mit der Scrum-Methodik vertraut gemacht, welche dann als Grundlage für die Projektarbeit diente. 
-
-	Die unser Gruppe übertragene Aufgabe bestand darin, eine App zu entwickeln, welche die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht.
+	Der vorliegende Bericht soll die rückblickende Betrachtung eines universitären Software-Pro\-jekts konstituieren, bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die zentrale Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
 	
-	 In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die ein oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung \footnote{http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}. Es erscheint insofern zunächst widersinnig, ein Geschäftsmodell, welches zunehmend effizient durch Softwareprodukte ersetzt wird und nur noch wenig profitabel ist, um jeden Preis erhalten zu wollen. Während nämlich auch im Bankgeschäft parallel zu sozialen Netzwerken Social-Banking-Konzepte erste Anwendung finden \footnote{http://www.visiblebanking.com/commbank-launches-first-social-banking-app-facebook-p2p-payments-7693/}, haben diese nicht unmittelbar Bezug zum Filialgeschäft.
+	Dieser sollte in Architektur und Gestaltung das Verständnis softwaretechnischer und interaktiver Konzepte deutlich machen, gleichzeitig aber geeignet sein, in einer konkreten Produktdemonstration im Projektabschluss praktischen Nutzen unter Beweis zu stellen. Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführenden Zertifizierung mit der Scrum-Methodik vertraut gemacht, welche dann als Grundlage für die Projektarbeit diente. 
+
+	Die unser Gruppe übertragene Aufgabe bestand darin, eine App zu entwickeln, welche die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht. In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die eine oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung \footnote{\url{http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}, \\Abruf am 23.02.2014 um 16:00 Uhr.}. Es erscheint insofern zunächst widersinnig, ein Geschäftsmodell, welches zunehmend effizient durch Softwareprodukte ersetzt wird und nur noch wenig profitabel ist, um jeden Preis erhalten zu wollen. Während nämlich auch im Bankgeschäft parallel zu sozialen Netzwerken Social-Banking-Konzepte erste Anwendung finden \footnote{\url{http://www.visiblebanking.com/commbank-launches-first-social-banking-app-facebook-p2p-payments-7693/},\\ Abruf am 23.02.2014 um 16:05 Uhr.}, haben diese nicht unmittelbar Bezug zum Filialgeschäft.
 	 
-	 Hier wurde uns bewusst, dass als Entwickler in Auftragsarbeit die eigenen Überlegungen hinsichtlich der Entwicklung eines Geschäftsfeldes oder Produktes zurückstehen müssen; viel mehr müssen innerhalb eines schwierigen Marktes Möglichkeiten gefunden werden, innerhalb der vorhandenen Strukturen zu innovieren.
+	Hier wurde uns bewusst, dass als Entwickler in Auftragsarbeit die eigenen Überlegungen hinsichtlich der Entwicklung eines Geschäftsfeldes oder Produktes zurückstehen müssen; vielmehr müssen in einem schwierigen Markt Möglichkeiten gefunden werden, innerhalb der vorhandenen Strukturen zu innovieren.
 	 
