--- a/Documentation/Report/Parts/Vorgehen.tex
+++ b/Documentation/Report/Parts/Vorgehen.tex
@@ -69,7 +69,7 @@ Problematisch erwies sich die zuvor getroffene Toolauswahl zur Organisation der 
 	 
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=.25]{Pictures/burndown-compiled}
+	\hspace{1.6cm}\includegraphics[width=.6\textwidth]{Pictures/burndown-compiled}
 	\caption{Von PivotalTracker generiertes Burndown-Chart \label{fig:BurndownCompiled}}
 \end{figure}
 
