--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -86,14 +86,15 @@
 \renewcommand{\headrulewidth}{0pt}
 \linespread{1.5}
 \geometry{a4paper}
-\geometry{left=25mm,right=25mm,bottom=35mm,top=30mm}
-\geometry{footnotesep=10mm}
+\geometry{left=25mm,right=25mm,bottom=30mm,top=30mm}
+\geometry{footnotesep=5mm}
 \geometry{headsep=10mm}
 \geometry{head=10mm}
 \geometry{bindingoffset=0mm}
 \definecolor{kiba}{HTML}{41707C}
 \newcommand{\pre}[1]{%
 	\texttt{#1}}
+\renewcommand\UrlFont{}
 
 %===============================================================================
 % Collaborative
