--- a/Documentation/Report/Parts/Qualitaetssicherung.tex
+++ b/Documentation/Report/Parts/Qualitaetssicherung.tex
@@ -4,7 +4,7 @@
 \subsection{Entwicklungsprozess}
 	Um Planungssicherheit zu haben benötigt man einen kontinuierlichen Prozess, damit man weiß, an wen welche Aufgaben zu verteilen sind und jeder Projektteilnehmer den Vorgangsablauf kennt. In unserem Fall war die Aufgabenverteilung bereits durch die T-Systems MMS anhand der Rollen Projektmanager, Konzepter, Berater und Entwickler vorgegeben, sodass wir uns auch versuchten, daran zu orientieren. 
 	
-	Unsere Arbeitsprozesse waren wichtig für die Qualität der Entwicklung. Die effektive Arbeitsteilung half uns, sich auf den jeweiligen Bereich fokussieren zu können und mit entsprechender Kenntnis voranschreiten zu können. Auch wenn die Umsetzung der Prozesse nicht immer problemfrei ablief, so haben wir es doch geschafft, unsere beiden Hauptfeatures Finder und Self-Service gut umsetzen zu können.
+	Die Feingliederung unserer Arbeitsprozesse war wichtig für die Qualität der Entwicklung. Die effektive Arbeitsteilung half uns, sich auf den jeweiligen Bereich fokussieren zu können und mit entsprechender Kenntnis voranschreiten zu können. Auch wenn die Umsetzung der Prozesse nicht immer problemfrei ablief, so haben wir es doch geschafft, unsere beiden Hauptfeatures Finder und Self-Service nach unseren Wünschen umsetzen zu können.
 
 \subsection{Qualität des Designs}
 	Damit sichergestellt ist, dass wir ein konsistentes, qualitatives Design haben, versuchten wir uns grundlegend an den iOS7-Design-Richtlinien zu orientieren.\footnote{\url{https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/}} Da leider kein Mitglied von uns weitreichende Erfahrungen mit Design-Werkzeugen hatte, war die Umsetzung dieser zunächst schwierig. Insbesondere mangelte es noch am nötigen Feingefühl, im Sinne eines konsistenten Interaktionsdesigns vorzugehen. Zum Abschluss des Projekts wurden wir hier jedoch sicherer und experimentierten zunehmend mit eigenen Entwürfen.
@@ -12,9 +12,13 @@
 \subsection{Umgang mit Feedback}
 	Ein effektives Instrument zur Qualitätssicherung, dass uns im Projekt durch die Veranstalter zur Verfügung gestellt wurde, ist das Feedback von potentiellen Kunden. Umso mehr ist es für uns daher eine große Hilfe gewesen, dass auf Probleme und Wünsche bei der App in wöchentlichen Plenarveranstaltungen eingegangen wurde. Wir haben jedes Feedback umgehend in unserer Facebook-Gruppe dokumentiert und Lösungen ausdiskutiert.
 	
-	Dieser Vorgang hat uns sehr in der Einhaltung der oben geschilderten Prozesse geholfen. Da wir uns jeden Dienstag und Donnerstag im Mac-Arbeitsraum getroffen haben, konnten wir erst neue Storys in PivotalTracker anhand des Feedbacks anlegen, diese dann unter uns aufteilen und bis zur nächsten Plenarveranstaltung abarbeiten. Man kann sagen, dass wir also die Plenarveranstaltung als „Motor“ für unsere Scrum-Iterationen benutzt haben.
+	Dieser Vorgang hat uns sehr in der Einhaltung der oben geschilderten Prozesse geholfen. Da wir uns jeden Dienstag und Donnerstag im Mac-Arbeitsraum getroffen haben, konnten wir erst neue Stories in PivotalTracker anhand des Feedbacks anlegen, diese dann unter uns aufteilen und bis zur nächsten Plenarveranstaltung abarbeiten. Man kann sagen, dass wir also die Plenarveranstaltung als „Motor“ für unsere Scrum-Iterationen benutzt haben.
 	
-	Wir entwickelten somit über die Zeit ein immer besseres Gefühl für die Umsetzung von Feedback und auch über die Möglichkeit, Scrum als Methode des agilen Projektmanagements anzuwenden.
+	Wir entwickelten somit über die Zeit ein immer besseres Gefühl für die Umsetzung von Feedback und auch für die Möglichkeit, Scrum als Methode des agilen Projektmanagements anzuwenden. 
+	
+	Zentral war dabei auch die Erkenntnis, dass eine Produktidee schon scheitern kann, wenn es uns als Entwicklern nicht gelingt, bestimmte Zusammenhänge nachvollziehbar zu machen. Insbesondere das Zusammenspiel zwischen Authentifizierung und erweiterter Funktionalität im Self-Service war bis zuletzt problematisch. Warum muss ein Kunde für die Authentifizierung speziell in die Bank gehen? Warum ist in die Self-Service-Station ein Kontoauszugsdrucker angebunden? 
+	
+	Hier wurde deutlich, dass ein Entwickler in derartigen Situationen zu einem gewissen Selbstmarketing fähig sein muss, dass eine Idee, deren Nutzen nicht prägnant wiedergegeben werden kann, schon an sich ein Problem haben könnte.
 
 \subsection{Ausblick}
 	Über die vorangegangen Punkte hinaus haben wir uns außerdem überlegt, wie wir auch entwicklungstechnischer Sicht Qualitätssicherung umsetzen können. Unser nächster Schritt in der Entwicklung wäre daher auch das Einbinden von Unittests gewesen, um auch in Hinblick auf die oben beschriebene Architektur eine Absicherung über die Prozesse geben.
